--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
         <module>Generic</module>
         <module>TDbank</module>
         <module>UiCatalog</module>
+        <module>AmazonMobileWeb</module>
+        <module>CrickBuzz</module>
+
     </modules>
 
     <dependencyManagement>
